@@ -1,3 +1,9 @@
+libavg 1.7.0 - Oct 29, 2011
+
+  svn revision 6888, branch release1.7.x
+
+  Bugfixes
+
 libavg 1.7.0.pre1 - Oct 29, 2011
 
   svn revision 6871
